image for mobile view updated

--- a/style.css
+++ b/style.css
@@ -380,7 +380,7 @@ nav .fa-solid{
 
 @media only screen and (max-width: 600px) {
     #header{
-        background-image: url(3d-cartoon-fitness-man1.png);
+        background-image: url(SSmobile.jpg);
     }
     .header-text{
         margin-top: 100%;
